task2/bin/y.output
   0  $accept : s $end

   1  s : global

   2  global : procedures procMain
   3         | procMain

   4  procedures : procedures proc
   5             | proc

   6  proc : procValue
   7       | procVoid

   8  procMain : VOID MAIN LEFTPAREN RIGHTPAREN block_return_void_statements

   9  procVoid : VOID id LEFTPAREN params RIGHTPAREN block_return_void_statements

  10  procValue : procID LEFTPAREN params RIGHTPAREN block_return_value_statements

  11  procID : varType id

  12  params :
  13         | paramsDeclare

  14  paramsDeclare : param COMMA paramsDeclare
  15                | param

  16  param : varType id

  17  expr : expr PLUS expr
  18       | expr MINUS expr
  19       | expr MULTI expr
  20       | expr DIVISION expr
  21       | expr EQUAL expr
  22       | expr GREATER expr
  23       | expr GREATEREQUAL expr
  24       | expr LESS expr
  25       | expr LESSEQUAL expr
  26       | expr NOTEQUAL expr
  27       | expr AND expr
  28       | expr OR expr
  29       | NOT expr
  30       | ADDRESS id
  31       | derefID
  32       | Pexpr
  33       | consts

  34  Pexpr : LEFTPAREN expr rightParen

  35  rightParen : RIGHTPAREN

  36  block_return_value_statements : LEFTBRACE newline RETURN expr SEMICOLON rightbrace
  37                                | LEFTBRACE RETURN expr SEMICOLON rightbrace

  38  block_return_void_statements : emptyBlock
  39                               | LEFTBRACE newline RETURN SEMICOLON rightbrace
  40                               | LEFTBRACE RETURN SEMICOLON rightbrace

  41  block_statements : emptyBlock
  42                   | LEFTBRACE newline rightbrace

  43  emptyBlock : LEFTBRACE rightbrace

  44  rightbrace : RIGHTBRACE

  45  consts : id
  46         | numbers
  47         | booleans
  48         | csnull
  49         | strings
  50         | chars
  51         | procCall

  52  id : ID

  53  numbers : INTEGER_NEG
  54          | INTEGER_POS
  55          | HEX_CONST
  56          | OCTAL_CONST
  57          | BINARY_CONST

  58  csnull : CSNULL

  59  booleans : BOOLTRUE
  60           | BOOLFALSE

  61  strings : STRING_CONST

  62  chars : CHAR_CONST

  63  procCall : id LEFTPAREN args RIGHTPAREN

  64  args :
  65       | argsDeclare

  66  argsDeclare : consts COMMA argsDeclare
  67              | consts

  68  derefID : DEREFERENCE id

  69  newline : declarations newline
  70          | statements
  71          | declarations

  72  declarations : variable_declare_statements SEMICOLON

  73  statements : statement statements
  74             | statement

  75  statement : IF_statements
  76            | LOOP_statements
  77            | proc
  78            | procCall SEMICOLON
  79            | ASSIGNMENT_statement SEMICOLON

  80  statements_type : statement
  81                  | block_statements

  82  IF_statements : IF cond statements_type
  83                | IF cond statements_type else

  84  else : ELSE statements_type

  85  LOOP_statements : while
  86                  | whileDO
  87                  | for

  88  while : WHILE cond statements_type

  89  whileDO : DO statements_type WHILE cond

  90  for : FOR for_cond rightParen statements_type

  91  for_cond : LEFTPAREN preCondition SEMICOLON postCondition SEMICOLON iteration

  92  preCondition :
  93               | expr
  94               | ASSIGNMENT_statement

  95  postCondition :
  96                | expr

  97  iteration :
  98            | ASSIGNMENT_statement

  99  cond : LEFTPAREN expr rightParen

 100  ASSIGNMENT_statement : id ASSIGNMENT expr
 101                       | derefID ASSIGNMENT expr

 102  str_ASSIGNMENT_statement : id LEFTBRACKET numbers RIGHTBRACKET ASSIGNMENT strings

 103  varType : BOOL
 104          | CHAR
 105          | INT
 106          | INTPTR
 107          | CHARPTR

 108  StringDeclare : id LEFTBRACKET numbers RIGHTBRACKET COMMA StringDeclare
 109                | str_ASSIGNMENT_statement
 110                | str_ASSIGNMENT_statement COMMA StringDeclare
 111                | id LEFTBRACKET numbers RIGHTBRACKET

 112  variablesDeclare : id COMMA variablesDeclare
 113                   | ASSIGNMENT_statement COMMA variablesDeclare
 114                   | ASSIGNMENT_statement
 115                   | id

 116  variable_declare_statements : varType variablesDeclare
 117                              | STRING StringDeclare

state 0
	$accept : . s $end  (0)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	VOID  shift 6
	.  error

	s  goto 7
	global  goto 8
	procedures  goto 9
	procMain  goto 10
	proc  goto 11
	procValue  goto 12
	procVoid  goto 13
	procID  goto 14
	varType  goto 15


state 1
	varType : BOOL .  (103)

	.  reduce 103


state 2
	varType : CHAR .  (104)

	.  reduce 104


state 3
	varType : INT .  (105)

	.  reduce 105


state 4
	varType : INTPTR .  (106)

	.  reduce 106


state 5
	varType : CHARPTR .  (107)

	.  reduce 107


state 6
	procMain : VOID . MAIN LEFTPAREN RIGHTPAREN block_return_void_statements  (8)
	procVoid : VOID . id LEFTPAREN params RIGHTPAREN block_return_void_statements  (9)

	ID  shift 16
	MAIN  shift 17
	.  error

	id  goto 18


state 7
	$accept : s . $end  (0)

	$end  accept


state 8
	s : global .  (1)

	.  reduce 1


state 9
	global : procedures . procMain  (2)
	procedures : procedures . proc  (4)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	VOID  shift 6
	.  error

	procMain  goto 19
	proc  goto 20
	procValue  goto 12
	procVoid  goto 13
	procID  goto 14
	varType  goto 15


state 10
	global : procMain .  (3)

	.  reduce 3


state 11
	procedures : proc .  (5)

	.  reduce 5


state 12
	proc : procValue .  (6)

	.  reduce 6


state 13
	proc : procVoid .  (7)

	.  reduce 7


state 14
	procValue : procID . LEFTPAREN params RIGHTPAREN block_return_value_statements  (10)

	LEFTPAREN  shift 21
	.  error


state 15
	procID : varType . id  (11)

	ID  shift 16
	.  error

	id  goto 22


state 16
	id : ID .  (52)

	.  reduce 52


state 17
	procMain : VOID MAIN . LEFTPAREN RIGHTPAREN block_return_void_statements  (8)

	LEFTPAREN  shift 23
	.  error


state 18
	procVoid : VOID id . LEFTPAREN params RIGHTPAREN block_return_void_statements  (9)

	LEFTPAREN  shift 24
	.  error


state 19
	global : procedures procMain .  (2)

	.  reduce 2


state 20
	procedures : procedures proc .  (4)

	.  reduce 4


state 21
	procValue : procID LEFTPAREN . params RIGHTPAREN block_return_value_statements  (10)
	params : .  (12)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	RIGHTPAREN  reduce 12

	params  goto 25
	varType  goto 26
	paramsDeclare  goto 27
	param  goto 28


state 22
	procID : varType id .  (11)

	.  reduce 11


state 23
	procMain : VOID MAIN LEFTPAREN . RIGHTPAREN block_return_void_statements  (8)

	RIGHTPAREN  shift 29
	.  error


state 24
	procVoid : VOID id LEFTPAREN . params RIGHTPAREN block_return_void_statements  (9)
	params : .  (12)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	RIGHTPAREN  reduce 12

	params  goto 30
	varType  goto 26
	paramsDeclare  goto 27
	param  goto 28


state 25
	procValue : procID LEFTPAREN params . RIGHTPAREN block_return_value_statements  (10)

	RIGHTPAREN  shift 31
	.  error


state 26
	param : varType . id  (16)

	ID  shift 16
	.  error

	id  goto 32


state 27
	params : paramsDeclare .  (13)

	.  reduce 13


state 28
	paramsDeclare : param . COMMA paramsDeclare  (14)
	paramsDeclare : param .  (15)

	COMMA  shift 33
	RIGHTPAREN  reduce 15


state 29
	procMain : VOID MAIN LEFTPAREN RIGHTPAREN . block_return_void_statements  (8)

	LEFTBRACE  shift 34
	.  error

	block_return_void_statements  goto 35
	emptyBlock  goto 36


state 30
	procVoid : VOID id LEFTPAREN params . RIGHTPAREN block_return_void_statements  (9)

	RIGHTPAREN  shift 37
	.  error


state 31
	procValue : procID LEFTPAREN params RIGHTPAREN . block_return_value_statements  (10)

	LEFTBRACE  shift 38
	.  error

	block_return_value_statements  goto 39


state 32
	param : varType id .  (16)

	.  reduce 16


state 33
	paramsDeclare : param COMMA . paramsDeclare  (14)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	.  error

	varType  goto 26
	paramsDeclare  goto 40
	param  goto 28


state 34
	block_return_void_statements : LEFTBRACE . newline RETURN SEMICOLON rightbrace  (39)
	block_return_void_statements : LEFTBRACE . RETURN SEMICOLON rightbrace  (40)
	emptyBlock : LEFTBRACE . rightbrace  (43)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 41
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	RETURN  shift 47
	DEREFERENCE  shift 48
	RIGHTBRACE  shift 49
	.  error

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 52
	derefID  goto 53
	newline  goto 54
	rightbrace  goto 55
	procCall  goto 56
	declarations  goto 57
	statements  goto 58
	variable_declare_statements  goto 59
	statement  goto 60
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 35
	procMain : VOID MAIN LEFTPAREN RIGHTPAREN block_return_void_statements .  (8)

	.  reduce 8


state 36
	block_return_void_statements : emptyBlock .  (38)

	.  reduce 38


state 37
	procVoid : VOID id LEFTPAREN params RIGHTPAREN . block_return_void_statements  (9)

	LEFTBRACE  shift 34
	.  error

	block_return_void_statements  goto 67
	emptyBlock  goto 36


state 38
	block_return_value_statements : LEFTBRACE . newline RETURN expr SEMICOLON rightbrace  (36)
	block_return_value_statements : LEFTBRACE . RETURN expr SEMICOLON rightbrace  (37)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 41
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	RETURN  shift 68
	DEREFERENCE  shift 48
	.  error

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 52
	derefID  goto 53
	newline  goto 69
	procCall  goto 56
	declarations  goto 57
	statements  goto 58
	variable_declare_statements  goto 59
	statement  goto 60
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 39
	procValue : procID LEFTPAREN params RIGHTPAREN block_return_value_statements .  (10)

	.  reduce 10


state 40
	paramsDeclare : param COMMA paramsDeclare .  (14)

	.  reduce 14


state 41
	variable_declare_statements : STRING . StringDeclare  (117)

	ID  shift 16
	.  error

	id  goto 70
	str_ASSIGNMENT_statement  goto 71
	StringDeclare  goto 72


state 42
	procVoid : VOID . id LEFTPAREN params RIGHTPAREN block_return_void_statements  (9)

	ID  shift 16
	.  error

	id  goto 18


state 43
	IF_statements : IF . cond statements_type  (82)
	IF_statements : IF . cond statements_type else  (83)

	LEFTPAREN  shift 73
	.  error

	cond  goto 74


state 44
	while : WHILE . cond statements_type  (88)

	LEFTPAREN  shift 73
	.  error

	cond  goto 75


state 45
	for : FOR . for_cond rightParen statements_type  (90)

	LEFTPAREN  shift 76
	.  error

	for_cond  goto 77


state 46
	whileDO : DO . statements_type WHILE cond  (89)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	DEREFERENCE  shift 48
	LEFTBRACE  shift 78
	.  error

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 15
	derefID  goto 53
	emptyBlock  goto 79
	block_statements  goto 80
	procCall  goto 56
	statement  goto 81
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	statements_type  goto 82
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 47
	block_return_void_statements : LEFTBRACE RETURN . SEMICOLON rightbrace  (40)

	SEMICOLON  shift 83
	.  error


state 48
	derefID : DEREFERENCE . id  (68)

	ID  shift 16
	.  error

	id  goto 84


state 49
	rightbrace : RIGHTBRACE .  (44)

	.  reduce 44


state 50
	statement : proc .  (77)

	.  reduce 77


state 51
	procCall : id . LEFTPAREN args RIGHTPAREN  (63)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (100)

	ASSIGNMENT  shift 85
	LEFTPAREN  shift 86
	.  error


state 52
	procID : varType . id  (11)
	variable_declare_statements : varType . variablesDeclare  (116)

	ID  shift 16
	DEREFERENCE  shift 48
	.  error

	id  goto 87
	derefID  goto 53
	ASSIGNMENT_statement  goto 88
	variablesDeclare  goto 89


state 53
	ASSIGNMENT_statement : derefID . ASSIGNMENT expr  (101)

	ASSIGNMENT  shift 90
	.  error


state 54
	block_return_void_statements : LEFTBRACE newline . RETURN SEMICOLON rightbrace  (39)

	RETURN  shift 91
	.  error


state 55
	emptyBlock : LEFTBRACE rightbrace .  (43)

	.  reduce 43


state 56
	statement : procCall . SEMICOLON  (78)

	SEMICOLON  shift 92
	.  error


state 57
	newline : declarations . newline  (69)
	newline : declarations .  (71)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 41
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	DEREFERENCE  shift 48
	RETURN  reduce 71
	RIGHTBRACE  reduce 71

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 52
	derefID  goto 53
	newline  goto 93
	procCall  goto 56
	declarations  goto 57
	statements  goto 58
	variable_declare_statements  goto 59
	statement  goto 60
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 58
	newline : statements .  (70)

	.  reduce 70


state 59
	declarations : variable_declare_statements . SEMICOLON  (72)

	SEMICOLON  shift 94
	.  error


state 60
	statements : statement . statements  (73)
	statements : statement .  (74)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	DEREFERENCE  shift 48
	RETURN  reduce 74
	RIGHTBRACE  reduce 74

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 15
	derefID  goto 53
	procCall  goto 56
	statements  goto 95
	statement  goto 60
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 61
	statement : IF_statements .  (75)

	.  reduce 75


state 62
	statement : LOOP_statements .  (76)

	.  reduce 76


state 63
	statement : ASSIGNMENT_statement . SEMICOLON  (79)

	SEMICOLON  shift 96
	.  error


state 64
	LOOP_statements : while .  (85)

	.  reduce 85


state 65
	LOOP_statements : whileDO .  (86)

	.  reduce 86


state 66
	LOOP_statements : for .  (87)

	.  reduce 87


state 67
	procVoid : VOID id LEFTPAREN params RIGHTPAREN block_return_void_statements .  (9)

	.  reduce 9


state 68
	block_return_value_statements : LEFTBRACE RETURN . expr SEMICOLON rightbrace  (37)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	.  error

	id  goto 110
	expr  goto 111
	derefID  goto 112
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120


state 69
	block_return_value_statements : LEFTBRACE newline . RETURN expr SEMICOLON rightbrace  (36)

	RETURN  shift 121
	.  error


state 70
	str_ASSIGNMENT_statement : id . LEFTBRACKET numbers RIGHTBRACKET ASSIGNMENT strings  (102)
	StringDeclare : id . LEFTBRACKET numbers RIGHTBRACKET COMMA StringDeclare  (108)
	StringDeclare : id . LEFTBRACKET numbers RIGHTBRACKET  (111)

	LEFTBRACKET  shift 122
	.  error


state 71
	StringDeclare : str_ASSIGNMENT_statement .  (109)
	StringDeclare : str_ASSIGNMENT_statement . COMMA StringDeclare  (110)

	COMMA  shift 123
	SEMICOLON  reduce 109


state 72
	variable_declare_statements : STRING StringDeclare .  (117)

	.  reduce 117


state 73
	cond : LEFTPAREN . expr rightParen  (99)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	.  error

	id  goto 110
	expr  goto 124
	derefID  goto 112
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120


state 74
	IF_statements : IF cond . statements_type  (82)
	IF_statements : IF cond . statements_type else  (83)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	DEREFERENCE  shift 48
	LEFTBRACE  shift 78
	.  error

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 15
	derefID  goto 53
	emptyBlock  goto 79
	block_statements  goto 80
	procCall  goto 56
	statement  goto 81
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	statements_type  goto 125
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 75
	while : WHILE cond . statements_type  (88)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	DEREFERENCE  shift 48
	LEFTBRACE  shift 78
	.  error

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 15
	derefID  goto 53
	emptyBlock  goto 79
	block_statements  goto 80
	procCall  goto 56
	statement  goto 81
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	statements_type  goto 126
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 76
	for_cond : LEFTPAREN . preCondition SEMICOLON postCondition SEMICOLON iteration  (91)
	preCondition : .  (92)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	SEMICOLON  reduce 92

	id  goto 127
	expr  goto 128
	derefID  goto 129
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120
	ASSIGNMENT_statement  goto 130
	preCondition  goto 131


state 77
	for : FOR for_cond . rightParen statements_type  (90)

	RIGHTPAREN  shift 132
	.  error

	rightParen  goto 133


state 78
	block_statements : LEFTBRACE . newline rightbrace  (42)
	emptyBlock : LEFTBRACE . rightbrace  (43)

	BOOL  shift 1
	CHAR  shift 2
	INT  shift 3
	STRING  shift 41
	INTPTR  shift 4
	CHARPTR  shift 5
	ID  shift 16
	VOID  shift 42
	IF  shift 43
	WHILE  shift 44
	FOR  shift 45
	DO  shift 46
	DEREFERENCE  shift 48
	RIGHTBRACE  shift 49
	.  error

	proc  goto 50
	procValue  goto 12
	procVoid  goto 13
	id  goto 51
	procID  goto 14
	varType  goto 52
	derefID  goto 53
	newline  goto 134
	rightbrace  goto 55
	procCall  goto 56
	declarations  goto 57
	statements  goto 58
	variable_declare_statements  goto 59
	statement  goto 60
	IF_statements  goto 61
	LOOP_statements  goto 62
	ASSIGNMENT_statement  goto 63
	while  goto 64
	whileDO  goto 65
	for  goto 66


state 79
	block_statements : emptyBlock .  (41)

	.  reduce 41


state 80
	statements_type : block_statements .  (81)

	.  reduce 81


state 81
	statements_type : statement .  (80)

	.  reduce 80


state 82
	whileDO : DO statements_type . WHILE cond  (89)

	WHILE  shift 135
	.  error


state 83
	block_return_void_statements : LEFTBRACE RETURN SEMICOLON . rightbrace  (40)

	RIGHTBRACE  shift 49
	.  error

	rightbrace  goto 136


state 84
	derefID : DEREFERENCE id .  (68)

	.  reduce 68


state 85
	ASSIGNMENT_statement : id ASSIGNMENT . expr  (100)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	.  error

	id  goto 110
	expr  goto 137
	derefID  goto 112
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120


state 86
	procCall : id LEFTPAREN . args RIGHTPAREN  (63)
	args : .  (64)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	RIGHTPAREN  reduce 64

	id  goto 110
	consts  goto 138
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120
	args  goto 139
	argsDeclare  goto 140


state 87
	procID : varType id .  (11)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (100)
	variablesDeclare : id . COMMA variablesDeclare  (112)
	variablesDeclare : id .  (115)

	ASSIGNMENT  shift 85
	COMMA  shift 141
	SEMICOLON  reduce 115
	LEFTPAREN  reduce 11


state 88
	variablesDeclare : ASSIGNMENT_statement . COMMA variablesDeclare  (113)
	variablesDeclare : ASSIGNMENT_statement .  (114)

	COMMA  shift 142
	SEMICOLON  reduce 114


state 89
	variable_declare_statements : varType variablesDeclare .  (116)

	.  reduce 116


state 90
	ASSIGNMENT_statement : derefID ASSIGNMENT . expr  (101)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	.  error

	id  goto 110
	expr  goto 143
	derefID  goto 112
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120


state 91
	block_return_void_statements : LEFTBRACE newline RETURN . SEMICOLON rightbrace  (39)

	SEMICOLON  shift 144
	.  error


state 92
	statement : procCall SEMICOLON .  (78)

	.  reduce 78


state 93
	newline : declarations newline .  (69)

	.  reduce 69


state 94
	declarations : variable_declare_statements SEMICOLON .  (72)

	.  reduce 72


state 95
	statements : statement statements .  (73)

	.  reduce 73


state 96
	statement : ASSIGNMENT_statement SEMICOLON .  (79)

	.  reduce 79


state 97
	booleans : BOOLTRUE .  (59)

	.  reduce 59


state 98
	booleans : BOOLFALSE .  (60)

	.  reduce 60


state 99
	csnull : CSNULL .  (58)

	.  reduce 58


state 100
	numbers : INTEGER_POS .  (54)

	.  reduce 54


state 101
	numbers : INTEGER_NEG .  (53)

	.  reduce 53


state 102
	chars : CHAR_CONST .  (62)

	.  reduce 62


state 103
	strings : STRING_CONST .  (61)

	.  reduce 61


state 104
	numbers : HEX_CONST .  (55)

	.  reduce 55


state 105
	numbers : OCTAL_CONST .  (56)

	.  reduce 56


state 106
	numbers : BINARY_CONST .  (57)

	.  reduce 57


state 107
	expr : NOT . expr  (29)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	.  error

	id  goto 110
	expr  goto 145
	derefID  goto 112
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120


state 108
	expr : ADDRESS . id  (30)

	ID  shift 16
	.  error

	id  goto 146


state 109
	Pexpr : LEFTPAREN . expr rightParen  (34)

	ID  shift 16
	BOOLTRUE  shift 97
	BOOLFALSE  shift 98
	CSNULL  shift 99
	INTEGER_POS  shift 100
	INTEGER_NEG  shift 101
	CHAR_CONST  shift 102
	STRING_CONST  shift 103
	HEX_CONST  shift 104
	OCTAL_CONST  shift 105
	BINARY_CONST  shift 106
	NOT  shift 107
	ADDRESS  shift 108
	DEREFERENCE  shift 48
	LEFTPAREN  shift 109
	.  error

	id  goto 110
	expr  goto 147
	derefID  goto 112
	Pexpr  goto 113
	consts  goto 114
	numbers  goto 115
	booleans  goto 116
	csnull  goto 117
	strings  goto 118
	chars  goto 119
	procCall  goto 120


state 110
	consts : id .  (45)
	procCall : id . LEFTPAREN args RIGHTPAREN  (63)

	LEFTPAREN  shift 86
	AND  reduce 45
	DIVISION  reduce 45
	EQUAL  reduce 45
	GREATER  reduce 45
	GREATEREQUAL  reduce 45
	LESS  reduce 45
	LESSEQUAL  reduce 45
	MINUS  reduce 45
	NOTEQUAL  reduce 45
	OR  reduce 45
	PLUS  reduce 45
	MULTI  reduce 45
	SEMICOLON  reduce 45
	COMMA  reduce 45
	RIGHTPAREN  reduce 45


state 111
	expr : expr . PLUS expr  (17)
	expr : expr . MINUS expr  (18)
	expr : expr . MULTI expr  (19)
	expr : expr . DIVISION expr  (20)
	expr : expr . EQUAL expr  (21)
	expr : expr . GREATER expr  (22)
	expr : expr . GREATEREQUAL expr  (23)
	expr : expr . LESS expr  (24)
	expr : expr . LESSEQUAL expr  (25)
	expr : expr . NOTEQUAL expr  (26)
	expr : expr . AND expr  (27)
	expr : expr . OR expr  (28)
	block_return_value_statements : LEFTBRACE RETURN expr . SEMICOLON rightbrace  (37)

	AND  shift 148
	DIVISION  shift 149
	EQUAL  shift 150
	GREATER  shift 151
	GREATEREQUAL  shift 152
	LESS  shift 153
	LESSEQUAL  shift 154
	MINUS  shift 155
	NOTEQUAL  shift 156
	OR  shift 157
	PLUS  shift 158
	MULTI  shift 159
	SEMICOLON  shift 160
	.  error


state 112
	expr : derefID .  (31)

	.  reduce 31


state 113
	expr : Pexpr .  (32)

	.  reduce 32


state 114
	expr : consts .  (33)

	.  reduce 33


state 115
	consts : numbers .  (46)

	.  reduce 46


state 116
	consts : booleans .  (47)

	.  reduce 47


state 117
	consts : csnull .  (48)

	.  reduce 48


state 118
	consts : strings .  (49)

	.  reduce 49


state 119
	consts : chars .  (50)

	.  reduce 50


state 120
	consts : procCall .  (51)

	.  reduce 51

